# workspace-play

./: Cargo.toml
vapp01/: Cargo.toml
vapp01/src/: main.rs
vlib01/: Cargo.toml
vlib07/: Cargo.toml
vlib07/src/: lib.rs
