[workspace]
#members = ["vapp01","vlib01", "vlib07"]
members = ["vapp01","vlib*"]

exclude = [
    "vlib07",
]

default-members = [
    "vlib*",
]

[package]
name = "workspace-play"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]

[workspace.package]
homepage = "https://blog.only1u.org"
